# wisefood-client

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: household_management.py
src/wisefood/: __init__.py  api_client.py  autocomplete.py  client.py  exceptions.py
src/wisefood/entities/: articles.py  artifacts.py  base.py  fctables.py  guides.py  households.py  textbooks.py
tests/: conftest.py  test_artifacts.py  test_client.py  test_entities.py  test_exceptions.py  test_guides.py  test_households.py  test_textbooks.py
