[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisefood"
version = "0.0.4"
description = "A small client for accessing and managing resources in the WiseFood platform."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "dpetrou", email = "dpetrou@athenarc.gr" }
]
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/wisefood/wisefood-client"
Issues = "https://github.com/wisefood/wisefood-client/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["data*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.ipynb"]